# STM32F446RE_RTOS

./: .mxproject  CMakeLists.txt  NucleoF446RE.ioc  README.md
Src/: main.c  stm32f4xx_hal_msp.c
